# verso

./: .gitignore  Cargo.toml  PLAN.md  index.html  package-lock.json  package.json  release.sh  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/examples/: extract_demo.rs  refresh_demo.rs
core/src/: db.rs  favicon.rs  fetch.rs  html.rs  lib.rs  models.rs  opml_io.rs  parse.rs  readability.rs  refresh.rs  rules.rs  seed.rs  sync.rs
design_handoff_verso/: README.md  Verso.dc.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adblock.rs  lib.rs  main.rs
src/components/: ArticleList.tsx  ContextMenu.tsx  Lightbox.tsx  ProgressPill.tsx  Sidebar.tsx  TitleBar.tsx  VideoModal.tsx
src/components/overlays/: AaPanel.tsx  AddFeedModal.tsx  AddSpaceModal.tsx  CommandPalette.tsx  Overlays.tsx  SettingsPanel.tsx  ThemeMenu.tsx
src/components/reader/: Reader.tsx  ReaderToolbar.tsx
src/hooks/: useAutoTheme.ts  useKeyboard.ts  useReadingProgress.ts
src/lib/: format.ts  ipc.ts  notify.ts  smartList.ts  themeList.ts
src/state/: store.ts  types.ts
src/styles/: components.css  global.css  themes.css
