[package]
name = "verso-core"
version = "0.1.0"
edition = "2021"
description = "Verso platformdan bağımsız çekirdek: fetch, parse, kural motoru, SQLite, readability, sync."
license = ""

[lib]
name = "verso_core"
path = "src/lib.rs"

[dependencies]
ammonia = "4.1.3"
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
dom_smoothie = "0.18.0"
feed-rs = "2.4.0"
opml = "1.1.6"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
base64 = "0.22.1"
